using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class CONSTANT
{
    public static string _player = "Player";
    public static string _enemy = "Enemy";
    public static string _capsule = "Capsule";
    public static string _audio = "Audio";
    public static string _mapDemo = "Map_Demo";
    public static string _mainMenu = "Main_Menu";
    public static string _start = "start";
    public static string _end = "end";
    public static string _horizontal = "Horizontal";
    public static string _idle = "idle";
    public static string _atk = "atk";
    public static string _atk2 = "atk2";
    public static string _atk3 = "atk3";
    public static string _run = "run";
    public static string _jump = "jump";
    public static string _hurt = "hurt";
    public static string _die = "die";
    public static string _fyling = "flying";
    public static string _insantaceKnifeScrip = "InstanceKnife";
    public static string _loadScene = "LoadScene";
    public static string _dieScrip = "Die";
    public static string _takeDameScrip = "TakeDameWithPlayer";
}